<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="com.zeddysoft.bakingapp.recipeDetail.RecipeDetailFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_recipe_detail_RV"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"/>

</LinearLayout>
